Update and rename index (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             -moz-user-select: none;    
             -ms-user-select: none;     
         }
+        @media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: white;
+    }
+        }
         img {
             display: block;
             margin: 0 auto;
