--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     }
     .access-button {
         background-color: rgb(10, 132, 255);
+        box-shadow: none;
     }
     .access-button:hover {
         background-color: rgb(10, 160, 255);
