--- a/index.html
+++ b/index.html
@@ -79,35 +79,18 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    <img src="logo.png" alt="QPILABELS" width="400" height="200">
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-    <h1 style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">쿼터파이</h1>
-    <h1 style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 450;">Since 2024</h1>
+    <h1 style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">QPI Labs</h1>
+    <h1 style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 450;">참여하고, 경험하고, 알려주세요!</h1>
     <br>
 
-    <p style="font-size: x-large; margin-bottom: 0; font-weight: 350;">2024년 설립된 쿼터파이는 충남과학고등학교의 자율동아리입니다.</p>
+    <p style="font-size: x-large; margin-bottom: 0; font-weight: 350;">QPI Labs에 참여하여 더 나은 쿼터파이를 만들 수 있게 도와주세요.</p>
     
     <br><br><br><br><br><br><br><br><br>
 
-    <p style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">상상을 현실로</p>
-    <p style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 600;">쿼터파이 프로젝트</p>
-    <div class="button-container">
-        <button class="access-button" onclick="window.location.href='https://qpi-labels.github.io/project/'">더 알아보기</button>
-    </div>
-
-    <br><br><br><br><br><br><br><br><br>
-
-    <p style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">쿼터파이 커뮤니티</p>
-    <div class="button-container">
-        <button class="access-button" onclick="window.location.href='https://github.com/qpi-labels/qpi-labels.github.io/discussions'">이동하기</button>
-    </div>
-
     <br><br><br><br><br><br><br><br><br>
 
 
-    <p>쿼터파이 메인 2025 ver. by 31th 이재원</p>
+    <p>QPI Labs</p>
     <br><br><br>
 
     <p>2025 Q-PI, All Rights Reserved.</p>
