--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>쿼터파이</title>
     <link rel="shortcut icon" type="image/x-icon" href="logo.ico">
     <meta property="og:url" content="https://qpi-labels.github.io/main/">
-    <meta property="og:title" content="쿼터파이">
+    <meta property="og:title" content="QPI Labs">
     <meta property="og:type" content="website">
     <meta property="og:image" content="og.png">
     <meta property="og:description" content="만족도 2년연속 1위! 쿼터파이">
