--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>쿼터파이</title>
+    <title>QPI Labs</title>
     <link rel="shortcut icon" type="image/x-icon" href="logo.ico">
     <meta property="og:url" content="https://qpi-labels.github.io/main/">
     <meta property="og:title" content="QPI Labs">
