--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>QPI Labs</title>
     <link rel="shortcut icon" type="image/x-icon" href="logo.ico">
-    <meta property="og:url" content="https://qpi-labels.github.io/main/">
+    <meta property="og:url" content="https://qpi-labels.github.io/labs/">
     <meta property="og:title" content="QPI Labs">
     <meta property="og:type" content="website">
     <meta property="og:image" content="og.png">
