--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -22,6 +21,7 @@
             -webkit-user-select: none; 
             -moz-user-select: none;    
             -ms-user-select: none;     
+            margin: 0; /* body margin 제거 */
         }
         img {
             display: block;
@@ -61,6 +61,38 @@
             background-color: rgb(10, 160, 255);
         }
             }
+
+        header {
+            position: fixed; /* 스크롤에 따라 고정 */
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: rgba(255, 255, 255, 0.9); /* 반투명 흰색 배경 */
+            padding: 20px;
+            z-index: 100; /* 다른 요소 위에 표시 */
+            display: flex;
+            align-items: center; /* 수직 가운데 정렬 */
+        }
+
+        header h1 {
+            font-size: x-large;
+            margin: 0;
+            font-weight: 700;
+            margin-left: 20px; 
+        }
+
+        @media (prefers-color-scheme: dark) {
+            header {
+                background-color: rgba(0, 0, 0, 0.9);
+            }
+            header h1 {
+                color: white;
+            }
+        }
+
+            main {
+            padding-top: 80px;
+        }
     </style>
 
     <script>
@@ -76,23 +108,28 @@
 </head>
 
 <body>
+    <header>
+        <h1>QPI Labs</h1>
+    </header>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <main>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    <h1 style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">QPI Labs</h1>
-    <h1 style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 450;">참여하고, 경험하고, 알려주세요!</h1>
-    <br>
+        <h1 style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">QPI Labs</h1>
+        <h1 style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 450;">참여하고, 경험하고, 알려주세요!</h1>
+        <br>
 
-    <p style="font-size: x-large; margin-bottom: 0; font-weight: 350;">QPI Labs에 참여하여 더 나은 쿼터파이를 만들 수 있게 도와주세요.</p>
-    
-    <br><br><br><br><br><br><br><br><br>
+        <p style="font-size: x-large; margin-bottom: 0; font-weight: 350;">QPI Labs에 참여하여 더 나은 쿼터파이를 만들 수 있게 도와주세요.</p>
+        
+        <br><br><br><br><br><br><br><br><br>
 
-    <br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br>
 
 
-    <p>QPI Labs</p>
-    <br><br><br>
+        <p>QPI Labs</p>
+        <br><br><br>
 
-    <p>2025 Q-PI, All Rights Reserved.</p>
+        <p>2025 Q-PI, All Rights Reserved.</p>
+    </main>
 </body>
 </html>
