--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             z-index: 100;
             display: flex;
             align-items: center;
-            border-bottom: 3px solid rgba(142, 142, 147); /* 하단 선 추가 */
+            border-bottom: 1.5px solid rgba(142, 142, 147); /* 하단 선 추가 */
         }
 
         header h1 {
@@ -86,7 +86,7 @@
         @media (prefers-color-scheme: dark) {
             header {
                 background-color: rgba(0, 0, 0, 0.8);
-                border-bottom: 3px solid rgba(142, 142, 147); /* 다크 모드에서 선 색상 변경 */
+                border-bottom: 1.5px solid rgba(142, 142, 147); /* 다크 모드에서 선 색상 변경 */
             }
             header h1 {
                 color: white;
@@ -125,6 +125,12 @@
         <p style="font-size: x-large; margin-bottom: 0; font-weight: 350;">QPI Labs에 참여하여 더 나은 쿼터파이를 만들 수 있게 도와주세요.</p>
         
         <br><br><br><br><br><br><br><br><br>
+
+        <p style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">Lorem Ipsum</p>
+        <p style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 600;">Lorem Ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <div class="button-container">
+            <button class="access-button" onclick="window.location.href='https://www.nasa.gov/sites/default/files/for_stsci_site_imageb-neptunelabeled.png'">이동하기</button>
+        </div>
 
         <br><br><br><br><br><br><br><br><br>
 
