--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         
         <br><br><br><br><br><br><br><br><br>
 
-        <p style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">Lorem Ipsum</p>
-        <p style="font-size: xx-large; margin-top: 0; margin-bottom: 0; font-weight: 600;">Lorem Ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <p style="font-size: xx-large; margin-bottom: 0; font-weight: 600;">Lorem Ipsum</p>
+        <p style="font-size: x-large; margin-top: 0; margin-bottom: 0; font-weight: 500;">Lorem Ipsum dolor sit amet, consectetur adipiscing elit</p>
         <div class="button-container">
             <button class="access-button" onclick="window.location.href='https://www.nasa.gov/sites/default/files/for_stsci_site_imageb-neptunelabeled.png'">이동하기</button>
         </div>
