--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             background-color: rgb(0, 122, 255);
             color: #fff;
             border: none;
-            padding: 18px 40px;
-            border-radius: 36px;
-            font-size: large;
+            padding: 15px 35px;
+            border-radius: 30px;
+            font-size: medium;
             font-weight: 700;
             cursor: pointer;
             box-shadow: 5px 5px 10px #d1d9e6, -5px -5px 10px #ffffff;
