--- a/home2/index.html
+++ b/home2/index.html
@@ -9,115 +9,119 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="og.png">
     <meta property="og:description" content="만족도 2년연속 1위! 쿼터파이">
+    
     <style>
-        @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
+        @import url("https://fonts.googleapis.com/css2?family=Inter:wght@700;900&display=swap");
 
-        body {
-            background-color: #f0f0f0;
-            color: #222;
-            font-family: 'Pretendard Variable';
-            text-align: center;
-            user-select: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
+        /* 기본 설정 */
+        * {
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            box-sizing: border-box;
         }
 
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+        body {
+            background-color: #f8f8f8;
+            color: black;
+            font-family: 'Inter', sans-serif;
+            text-align: center;
+            user-select: none;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        /* 다크 모드 */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #181818;
+                color: white;
+            }
+        }
+
+        /* 헤더 스타일 */
+        .header {
+            font-size: 64px;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: -2px;
+            background: black;
+            color: white;
             padding: 20px;
+            margin-bottom: 40px;
+            border-bottom: 8px solid red;
         }
 
-        img {
-            display: block;
-            margin: 20px auto;
-            max-width: 80%;
-            height: auto;
-            filter: grayscale(20%);
-            transition: opacity 0.3s ease, filter 0.3s ease;
+        /* 로고 */
+        .logo-container {
+            width: 100%;
+            max-width: 400px;
+            margin: 0 auto 40px;
         }
 
-        h1 {
-            font-size: clamp(2rem, 5vw, 4rem);
+        .logo {
+            width: 100%;
+            transition: opacity 0.3s ease;
+        }
+
+        /* 버튼 스타일 */
+        .access-button {
+            display: inline-block;
+            background: none;
+            color: black;
+            font-size: 20px;
             font-weight: 700;
-            margin: 10px 0;
+            padding: 15px 40px;
+            border: 4px solid black;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            margin: 10px;
             text-transform: uppercase;
         }
 
-        p {
-            font-size: clamp(1rem, 2vw, 1.5rem);
-            margin: 5px 0;
-        }
-
-        .button-container {
-            margin-top: 20px;
-        }
-
-        .access-button {
-            background-color: #444;
-            color: #eee;
-            border: none;
-            padding: 15px 30px;
-            border-radius: 0;
-            font-size: clamp(1rem, 1.5vw, 1.2rem);
-            font-weight: 600;
-            cursor: pointer;
-            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
-            transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
-        }
-
         .access-button:hover {
-            background-color: #666;
-            transform: scale(1.02);
+            background: black;
+            color: white;
         }
 
-        footer {
-            background-color: #333;
-            color: #eee;
-            padding: 10px;
-            text-align: center;
-            font-size: 0.8rem;
-        }
-
+        /* 다크 모드 버튼 */
         @media (prefers-color-scheme: dark) {
-            body {
-                background-color: #111;
-                color: #eee;
-            }
-
             .access-button {
-                background-color: #666;
-                color: #222;
-                box-shadow: none;
+                color: white;
+                border-color: white;
             }
-
             .access-button:hover {
-                background-color: #888;
+                background: white;
+                color: black;
             }
+        }
 
-            footer {
-                background-color: #222;
+        /* 콘텐츠 스타일 */
+        .content {
+            font-size: 28px;
+            font-weight: 700;
+            text-transform: uppercase;
+            margin-bottom: 40px;
+        }
+
+        /* 푸터 스타일 */
+        .footer {
+            font-size: 16px;
+            font-weight: 400;
+            margin-top: 80px;
+            padding: 20px;
+            background: black;
+            color: white;
+        }
+
+        /* 다크 모드 푸터 */
+        @media (prefers-color-scheme: dark) {
+            .footer {
+                background: white;
+                color: black;
             }
         }
     </style>
+
     <script>
-        document.addEventListener('contextmenu', function(e) {
-            e.preventDefault();
-        });
-
-        document.addEventListener('selectstart', function(e) {
-            e.preventDefault();
-        });
-
         function updateLogo() {
             const logoImg = document.getElementById('logo');
             const isDarkMode = window.matchMedia('(prefers-color-scheme: dark)').matches;
@@ -127,39 +131,41 @@
                 logoImg.style.opacity = 1;
             }, 200);
         }
-        
+
         document.addEventListener("DOMContentLoaded", updateLogo);
 
         const darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
         if (darkModeMediaQuery.addEventListener) {
             darkModeMediaQuery.addEventListener('change', updateLogo);
         } else if (darkModeMediaQuery.addListener) {
-            darkModeMediaQuery.addListener(updateLogo);
+            darkModeMediaQuery.addListener(updateLogo); // 구버전 브라우저 호환
         }
     </script>
 </head>
+
 <body>
-<div class="container">
-    <img id="logo" src="logo.png" alt="QPILABELS">
 
-    <h1>쿼터파이</h1>
-    <p>Since 2024</p>
-    <p>2024년 설립된 쿼터파이는 충남과학고등학교의 자율동아리입니다.</p>
+    <div class="header">쿼터파이</div>
 
-    <h1>상상을 현실로</h1>
-    <p>쿼터파이 프로젝트</p>
-    <div class="button-container">
-        <button class="access-button" onclick="window.location.href='https://qpi-labels.github.io/project/'">더 알아보기</button>
+    <div class="logo-container">
+        <img id="logo" class="logo" src="logo.png" alt="QPILABELS">
     </div>
 
-    <h1>쿼터파이 커뮤니티</h1>
-    <div class="button-container">
-        <button class="access-button" onclick="window.location.href='https://github.com/qpi-labels/qpi-labels.github.io/discussions'">이동하기</button>
+    <div class="content">
+        상상을 현실로, 쿼터파이 프로젝트
     </div>
-</div>
-<footer>
-    <p>쿼터파이 메인 2025 ver. by 31th 이재원</p>
-    <p>2025 Q-PI, All Rights Reserved.</p>
-</footer>
+
+    <button class="access-button" onclick="window.location.href='https://qpi-labels.github.io/project/'">
+        더 알아보기
+    </button>
+
+    <button class="access-button" onclick="window.location.href='https://github.com/qpi-labels/qpi-labels.github.io/discussions'">
+        커뮤니티
+    </button>
+
+    <div class="footer">
+        2025 Q-PI, All Rights Reserved.
+    </div>
+
 </body>
 </html>
