--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <body>
     <header>
-        <h1>QPI Labs</h1>
+        <h1 style="font-size: x-large; margin-bottom: 0; font-weight: 550;">QPI Labs</h1>
     </header>
 
     <main>
