--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -41,12 +41,9 @@
         #search-bar {
             width: 80%;
             padding: 10px;
+            border-radius: 30px;
             border: 1px solid #ccc;
             font-size: 16px;
-        }
-
-        #search-buttons {
-            margin-top: 10px;
         }
 
         .search-button {
