--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -25,7 +25,7 @@
         }
 
         header {
-            background-color: #f0f0f0;
+            background-color: #fafafa;
             padding: 20px;
         }
 
@@ -50,16 +50,14 @@
             background-color: rgb(0, 122, 255);
             color: #fff;
             border: none;
-            padding: 15px 35px;
-            font-size: medium;
+            padding: 8px 20px;
+            font-size: small;
             font-weight: 700;
             cursor: pointer;
-            box-shadow: 5px 5px 10px #d1d9e6, -5px -5px 10px #ffffff;
             transition: transform 0.2s ease-out, background-color 0.3s ease, box-shadow 0.3s ease; /* box-shadow 전환 효과 추가 */
         }
         .search-button:hover {
             background-color: rgb(0, 150, 255);
-            box-shadow: 5px 5px 10px #d1d9e6, -5px -5px 10px #ffffff;
         }
 
         #response-container {
