--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -99,15 +99,14 @@
     <header>
         <div><a href="https://qpi-labels.github.io/main/"><img src="https://i.ibb.co/THk34pC/001-12.webp" alt="QISS Logo"></a></div>
         <input type="text" id="search-bar" placeholder="검색어를 입력하세요">
-        <br>
+        <br><br><br>
         <div id="search-buttons">
-            <button class="search-button" onclick="searchInGoogle()">Google 검색결과</button>
-            <button class="search-button" onclick="searchInNaver()">Naver 검색결과</button>
-            <button class="search-button" onclick="searchInDBpia()">DBpia 검색결과</button>
-            <button class="search-button" onclick="searchInGs()">Google scholar 검색결과</button>
-            <button class="search-button" onclick="searchInRnE()">R&E 지원센터 검색결과</button>
-            <button class="search-button" onclick="searchInRISS()">RISS 검색결과</button>
-            <button class="search-button" onclick="askGPT()">GPT</button>
+            <button class="search-button" onclick="searchInGoogle()">Google</button>
+            <button class="search-button" onclick="searchInNaver()">Naver</button>
+            <button class="search-button" onclick="searchInDBpia()">DBpia</button>
+            <button class="search-button" onclick="searchInGs()">Google scholar</button>
+            <button class="search-button" onclick="searchInRnE()">R&E 지원센터</button>
+            <button class="search-button" onclick="searchInRISS()">RISS</button>
         </div>
 
         <br>
