--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -98,8 +98,8 @@
 <body>
     <header>
         <div><a href="https://qpi-labels.github.io/main/"><img src="https://i.ibb.co/THk34pC/001-12.webp" alt="QISS Logo"></a></div>
-        <input type="text" id="search-bar" placeholder="검색어를 입력하세요">
-        <br><br><br>
+        <input type="text" id="search-bar" placeholder="무엇이 궁금하신가요?">
+        <br><br>
         <div id="search-buttons">
             <button class="search-button" onclick="searchInGoogle()">Google</button>
             <button class="search-button" onclick="searchInNaver()">Naver</button>
