--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -51,6 +51,7 @@
             color: #fff;
             border: none;
             padding: 8px 20px;
+            border-radius: 16px;
             font-size: small;
             font-weight: 700;
             cursor: pointer;
