--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -106,7 +106,7 @@
             <button class="search-button" onclick="searchInGoogle()">Google</button>
             <button class="search-button" onclick="searchInNaver()">Naver</button>
             <button class="search-button" onclick="searchInDBpia()">DBpia</button>
-            <button class="search-button" onclick="searchInGs()">Google scholar</button>
+            <button class="search-button" onclick="searchInGs()">Scholar</button>
             <button class="search-button" onclick="searchInRISS()">RISS</button>
         </div>
 
