--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -116,8 +116,8 @@
     <header>
         <h1 style="font-size: x-large; margin-bottom: 0; font-weight: 550;">QISS</h1>
     </header>
-    
-        <div><a href="https://qpi-labels.github.io/main/"><img src="https://i.ibb.co/THk34pC/001-12.webp" alt="QISS Logo"></a></div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <h1 style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">QISS</h1>
         <input type="text" id="search-bar" placeholder="무엇이 궁금하신가요?">
         <br><br>
         <div id="search-buttons">
