--- a/qiss_v2/index.html
+++ b/qiss_v2/index.html
@@ -116,7 +116,7 @@
     <header>
         <h1 style="font-size: x-large; margin-bottom: 0; font-weight: 550;">QISS</h1>
     </header>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
         <h1 style="font-size: xxx-large; margin-bottom: 0; font-weight: 700;">QISS</h1>
         <input type="text" id="search-bar" placeholder="무엇이 궁금하신가요?">
         <br><br>
@@ -132,7 +132,7 @@
 
         <div id="current-time">현재 시간: <span id="time-display"></span></div>
 
-        <div id="credit">Quarter-Pi Integrated Search System | 2024 Quarter-Pi</div>
+        <div id="credit">2025 Q-PI, All Rights Reserved.</div>
     
     
 
