--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
 
         body {
-            background-color: white;
+            background-color: #fafafa;
             color: black;
             font-family: 'Pretendard Variable';
             text-align: center;
@@ -67,7 +67,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(250, 250, 250, 0.8);
             backdrop-filter: blur(10px); /* 블러 효과 추가 */
             padding: 13px;
             z-index: 100;
