--- a/index.html
+++ b/index.html
@@ -126,11 +126,12 @@
         
         <br><br><br><br><br><br><br><br><br>
 
-        <p style="font-size: xx-large; margin-bottom: 0; font-weight: 600;">Lorem Ipsum</p>
-        <p style="font-size: x-large; margin-top: 0; margin-bottom: 0; font-weight: 500;">Lorem Ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <p style="font-size: xx-large; margin-bottom: 0; font-weight: 600;">QISS V2</p>
+        <p style="font-size: x-large; margin-top: 0; margin-bottom: 0; font-weight: 500;">QISS 개선버전</p>
         <div class="button-container">
-            <button class="access-button" onclick="window.location.href='https://www.nasa.gov/sites/default/files/for_stsci_site_imageb-neptunelabeled.png'">이동하기</button>
-        </div>
+  <button class="access-button" onclick="window.open('https://qpi-labels.github.io/labs/qiss_v2/', '_blank')">이동하기</button>
+</div>
+
 
         <br><br><br><br><br><br><br><br><br>
 
